--- a/HKare/src/components/home_page/HomePage.css
+++ b/HKare/src/components/home_page/HomePage.css
@@ -1,7 +1,7 @@
 body
 {
     display: flex;
-    background: black;
+    background: #4A90E2;
 }
 
 .home-container
@@ -24,7 +24,7 @@ body
 
 .home-container .login-buttons a:hover
 {
-    background: white;
+    background: #F4F4F4;
     color: black;
 }
 
